Error Handling Middlware Modified
